#
#  Copyright (C) 2006 Intel Corporation
#  
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
#  
#

bin_PROGRAMS= dral2PTV
dral2PTV_LDFLAGS= -lz
dral2PTV_SOURCES = dral2PTV.cpp PT_Data.cpp PT_IO.cpp PT_Log.cpp PT_Sorters.cpp PT_Types.cpp PT_Util.cpp rgx.cpp xfopen.cpp

WARNFLAGS += -Wno-old-style-cast -Wno-unused
